# jupyter-ohm-forks

./: .gitignore  README.md  environment.yml  forks.csv  forks.yaml  forks.yaml.save  main.ipynb  pyproject.toml
abis/: clam.abi  clamcirculating.abi  heccirculating.abi  sclam.abi  sjade.abi  sjadestaking.abi
docs/doctrees/: challenges.doctree  environment.pickle  extended-metrics.doctree  introduction.doctree  metrics.doctree
docs/doctrees/nbsphinx/: challenges.ipynb  extended-metrics.ipynb  historical-usage.ipynb  metrics.ipynb
docs/html/: challenges.html  extended-metrics.html  extended-metrics.ipynb  genindex.html  historical-usage.html  index.html  introduction.html  introduction.ipynb  metrics.html  metrics.ipynb  objects.inv  search.html  searchindex.js  snapshot-usage.html
docs/html/_sources/: extended-metrics.ipynb.txt  introduction.ipynb.txt  metrics.ipynb.txt
docs/source/: challenges.ipynb  conf.py  extended-metrics.ipynb  metrics.ipynb  snapshot-usage.ipynb
jupyter_ohm_forks/: coingecko.py  debank.py  defi_llama.py  dune.py  graph.py  on_chain.py
tests/: forks.csv  forks.yaml  test_jupyter_ohm_forks.py
