[tool.poetry]
name = "jupyter-ohm-forks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
requests = "^2.26.0"
web3 = "^5.25.0"
PyYAML = "^6.0"
pandas = "^1.3.4"
ipython = "^7.30.1"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
pytest = "^6.2.5"
Sphinx = "^4.3.1"
nbsphinx = "^0.8.7"
black = "^21.12b0"
sphinx-issues = "^1.2.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
